--- a/Main/Source/Shared/BBC.Dna.Sites.Tests/BBC.Dna.Sites.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Sites.Tests/BBC.Dna.Sites.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ContextTest.cs" />
     <Compile Include="OpenCloseTimeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteConfigTest.cs" />
     <Compile Include="SiteListTest.cs" />
     <Compile Include="SiteOptionInvalidTypeExceptionTest.cs" />
     <Compile Include="SiteOptionListTest.cs" />
