--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -132,6 +132,20 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MBAdmin.aspx.cs">
+      <DependentUpon>MBAdmin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MBAdmin.aspx.designer.cs">
+      <DependentUpon>MBAdmin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MBAdminAssets.aspx.cs">
+      <DependentUpon>MBAdminAssets.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MBAdminAssets.aspx.designer.cs">
+      <DependentUpon>MBAdminAssets.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MBAdminDesign.aspx.cs">
       <DependentUpon>MBAdminDesign.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -815,6 +829,8 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="MBAdmin.aspx" />
+    <Content Include="MBAdminAssets.aspx" />
     <Content Include="MBAdminDesign.aspx" />
     <Content Include="TermsFilterImport.aspx" />
     <Content Include="TermsFilterAdmin.aspx" />
@@ -834,7 +850,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>7742</DevelopmentServerPort>
+          <DevelopmentServerPort>17766</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
