--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ExtraInfoTest.cs" />
     <Compile Include="ForumHelperTest.cs" />
     <Compile Include="ForumThreadsTest.cs" />
+    <Compile Include="FrontPageElementTest.cs" />
     <Compile Include="GuideEntryTest.cs" />
     <Compile Include="OnlineUsersTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,12 +93,18 @@
     <Compile Include="ThreadPostTest.cs" />
     <Compile Include="ThreadSummaryTest.cs" />
     <Compile Include="ThreadTest.cs" />
+    <Compile Include="TopicElementTest.cs" />
+    <Compile Include="TopicListEditTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.Groups\BBC.Dna.Groups.csproj">
+      <Project>{33A2531A-AAAA-4A97-A2C1-F18E785D6F8D}</Project>
+      <Name>BBC.Dna.Groups %28Source\Shared\BBC.Dna.Groups\BBC.Dna.Groups%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
       <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
