--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CachableBase.cs" />
     <Compile Include="Club.cs" />
     <Compile Include="ArticleInfoReferencesUser.cs" />
+    <Compile Include="FrontPageElement.cs" />
     <Compile Include="SmileyTranslator.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="ForumHelper.cs" />
@@ -106,12 +107,17 @@
     <Compile Include="ThreadPost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSummary.cs" />
+    <Compile Include="TopicCreatedDate.cs" />
+    <Compile Include="TopicLastUpdated.cs" />
+    <Compile Include="TopicElementList.cs" />
+    <Compile Include="TopicPage.cs" />
     <Compile Include="Translator.cs" />
     <Compile Include="User.cs" />
     <Compile Include="RelatedClubs.cs" />
     <Compile Include="SubscribeState.cs" />
     <Compile Include="OnlineUsers.cs" />
     <Compile Include="PageUi.cs" />
+    <Compile Include="TopicElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
