--- a/Main/Source/Shared/BBC.Dna.Sites/BBC.Dna.Sites.csproj
+++ b/Main/Source/Shared/BBC.Dna.Sites/BBC.Dna.Sites.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skin.cs" />
     <Compile Include="Topic.cs" />
+    <Compile Include="TopicList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
