--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -267,6 +267,7 @@
       <DependentUpon>NewUsers.aspx</DependentUpon>
     </Compile>
     <None Include="App_Code\ActionlessForm.cs" />
+    <Content Include="web.config" />
     <Compile Include="ArticleDiagnosticPage.aspx.cs">
       <DependentUpon>ArticleDiagnosticPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
