Reverts the change to remove the BBCUID search option, makes it a SuperUser only option. Adds in a login name search.

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1285,6 +1285,7 @@
     <None Include="removethreadfromstickylist.sql" />
     <None Include="FetchExLinkModerationEventHistory.sql" />
     <None Include="FetchExLinkModerationHistory.sql" />
+    <None Include="searchforuservialoginname.sql" />
     <None Include="setforumhosturl.sql" />
     <None Include="generateemailevents.sql" />
     <None Include="generateexmodevents.sql" />
