--- a/Main/Source/Web Services/BBC.DNA.Services.Moderation/BBC.DNA.Services.Moderation.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Moderation/BBC.DNA.Services.Moderation.csproj
@@ -124,6 +124,8 @@
   <ItemGroup>
     <Content Include="configurations\Web.config" />
     <Content Include="Global.asax" />
+    <Content Include="status.aspx" />
+    <Content Include="version.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
