--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -126,6 +126,11 @@
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
     <Compile Include="MBAdminDesignBuilder.cs" />
+    <Compile Include="ModerateHome.cs" />
+    <Compile Include="ModeratorInfo.cs" />
+    <Compile Include="ModHomeParameters.cs" />
+    <Compile Include="ModQueueStat.cs" />
+    <Compile Include="ModStats.cs" />
     <Compile Include="TermsFilterAdminPageImport.cs" />
     <Compile Include="TermsFilterAdminPageBuilder.cs" />
     <Compile Include="ForumPageBuilder.cs" />
