--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -126,6 +126,9 @@
     </None>
     <None Include="Club.xsd" />
     <None Include="ContentSignifSettings.xsd" />
+    <None Include="H2G2ModerateHome.xsd" />
+    <None Include="H2G2ModeratePosts.xsd" />
+    <None Include="ModerationHome.xsd" />
     <None Include="SiteConfig_V2Boards.xsd" />
     <None Include="Result.xsd" />
     <None Include="DistressMessages.xsd" />
@@ -137,7 +140,6 @@
     <None Include="H2G2ForumFlat.xsd" />
     <None Include="H2G2ForumFlat606Site.xsd" />
     <None Include="H2G2ModerateExlinksPage.xsd" />
-    <None Include="H2G2ModeratePosts.xsd" />
     <None Include="H2G2ModeratorManagementPage.xsd" />
     <None Include="H2G2UITemplateFlat.xsd" />
     <None Include="Journal.xsd" />
