--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -250,6 +250,8 @@
     <Compile Include="CommentBoxTestsUsingApi.cs" />
     <Compile Include="ArticlePageTests.cs" />
     <Compile Include="Dna.Services\CommentsList.cs" />
+    <Compile Include="ModerateHomePageTests.cs" />
+    <Compile Include="MorePagesPageTests.cs" />
     <Compile Include="TermsFilterImportPageTests.cs" />
     <Compile Include="TermsFilterAdminPageTests.cs" />
     <Compile Include="ForumPageTests.cs" />
