--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ThreadPostTest.cs" />
     <Compile Include="ThreadSummaryTest.cs" />
     <Compile Include="ThreadTest.cs" />
+    <Compile Include="TopFivesTests.cs" />
     <Compile Include="TopicElementTest.cs" />
     <Compile Include="TopicListEditTest.cs" />
     <Compile Include="UserTest.cs" />
@@ -121,6 +122,10 @@
     <ProjectReference Include="..\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
       <Name>BBC.Dna.Utils %28Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestUtils\TestUtils.csproj">
+      <Project>{E09BF891-7D4F-403E-B830-B9E2606D2C22}</Project>
+      <Name>TestUtils %28Source\Shared\TestUtils\TestUtils%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
