Migration script added to migrate test users and sites to identity in smallguide addition of topfive schema which accepts everything addition of topfive element to all flat pages

--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -469,6 +469,7 @@
       </SubType>
     </None>
     <None Include="ThreadSummary.xsd" />
+    <None Include="TopFives.xsd" />
     <None Include="TopicList.xsd" />
     <None Include="TopicPage.xsd" />
     <None Include="TrackedParameters.xsd">
