--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -108,7 +108,7 @@
     <Compile Include="ThreadPost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSummary.cs" />
-    <Compile Include="TopFive.cs" />
+    <Compile Include="RecentActivity.cs" />
     <Compile Include="TopicCreatedDate.cs" />
     <Compile Include="TopicLastUpdated.cs" />
     <Compile Include="TopicElementList.cs" />
