--- a/Main/Source/Web Services/BBC.Dna.Services.Forums/BBC.Dna.Services.Forums.csproj
+++ b/Main/Source/Web Services/BBC.Dna.Services.Forums/BBC.Dna.Services.Forums.csproj
@@ -4,17 +4,20 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E4C34C5F-5F3B-4A43-A2BF-E593E1884786}</ProjectGuid>
-    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <ProjectGuid>{0F8243FA-0769-4A58-AC3F-12D51B6479DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>comments</RootNamespace>
-    <AssemblyName>comments</AssemblyName>
+    <RootNamespace>BBC.Dna.Services.Forums</RootNamespace>
+    <AssemblyName>BBC.Dna.Services.Forums</AssemblyName>
+    <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,12 +31,16 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Http, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Reference DLLs\Microsoft.Http\Microsoft.Http.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
@@ -46,19 +53,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="saxon9api, Version=9.1.0.5, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.Design, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BBC.DNA\ReferenceDlls\saxon\saxon9api.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.Design.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -72,38 +75,14 @@
     <Reference Include="System.Web.Extensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Web.Mobile" />
-    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CommentsService.svc" />
-    <Content Include="Global.asax" />
-    <Content Include="samples\comedyextra.htm" />
-    <Content Include="samples\CommentForum.htm" />
-    <Content Include="samples\index.htm" />
-    <Content Include="samples\news.htm" />
-    <Content Include="samples\style.css" />
-    <Content Include="xslt\2.0\commentforum.xsl" />
-    <Content Include="xslt\2.0\commentforumlist.xsl" />
-    <Content Include="xslt\2.0\commentssummary.xsl" />
-    <Content Include="xslt\2.0\common.xsl" />
-    <Content Include="xslt\2.0\createdupdated.xsl" />
-    <Content Include="xslt\2.0\formatDateTime.xsl" />
-    <Content Include="xslt\2.0\functions.xsl" />
-    <Content Include="xslt\2.0\paging.xsl" />
-    <Content Include="xslt\2.0\user.xsl" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CommentsService.cs" />
-    <Compile Include="ReviewService.cs" />
+    <Compile Include="ForumsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="samples\commentboxtestharness.aspx.designer.cs">
-      <DependentUpon>commentboxtestharness.aspx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\BBC.Dna.Api\BBC.Dna.Api.csproj">
@@ -114,13 +93,9 @@
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Shared\BBC.Dna.Groups\BBC.Dna.Groups.csproj">
-      <Project>{33A2531A-AAAA-4A97-A2C1-F18E785D6F8D}</Project>
-      <Name>BBC.Dna.Groups %28Source\Shared\BBC.Dna.Groups\BBC.Dna.Groups%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Shared\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
-      <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
-      <Name>BBC.DNA.Moderation.Utils %28Source\Shared\BBC.Dna.Moderation.Utils\BBC.DNA.Moderation.Utils%29</Name>
+    <ProjectReference Include="..\..\Shared\BBC.Dna.Objects\BBC.Dna.Objects.csproj">
+      <Project>{B4EA926E-7D99-4077-8315-882F413B994D}</Project>
+      <Name>BBC.Dna.Objects %28Source\Shared\BBC.Dna.Objects\BBC.Dna.Objects%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\BBC.Dna.Services\BBC.Dna.Services.csproj">
       <Project>{A69D0F3C-9ACC-41BF-B3F8-CF6E31099D77}</Project>
@@ -129,10 +104,6 @@
     <ProjectReference Include="..\..\Shared\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Shared\BBC.Dna.Users\BBC.Dna.Users.csproj">
-      <Project>{19609A9E-E93A-4106-8529-F3A6C7DE9BF7}</Project>
-      <Name>BBC.Dna.Users %28Source\Shared\BBC.Dna.Users\BBC.Dna.Users%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
@@ -144,31 +115,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="configurations\Web.config" />
-    <Content Include="ReviewService.svc" />
-    <Content Include="samples\5-0.gif" />
-    <Content Include="samples\iplayer.htm" />
+    <Content Include="ForumsService.svc" />
+    <Content Include="Global.asax" />
     <Content Include="status.aspx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="memcachedstatus.aspx" />
-    <Content Include="samples\commentboxtestharness.aspx" />
-    <Content Include="samples\dna_comments.css" />
     <Content Include="version.aspx" />
-    <Content Include="xslt\2.0\comment.xsl" />
-    <Content Include="xslt\2.0\commentinfo.xsl" />
-    <Content Include="xslt\2.0\commentslist.xsl" />
-    <Content Include="xslt\2.0\rating.xsl" />
-    <Content Include="xslt\2.0\ratingforum.xsl" />
-    <Content Include="xslt\2.0\ratinginfo.xsl" />
-    <Content Include="xslt\2.0\ratingslist.xsl" />
-    <Content Include="xslt\2.0\ratingssummary.xsl" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <None Include="BBC.Dna.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -178,19 +133,10 @@
   -->
   <ProjectExtensions>
     <VisualStudio>
-      <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
-        <WebProjectProperties>
-          <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>41721</DevelopmentServerPort>
-          <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:8081/comments</IISUrl>
-          <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
-          <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
-        </WebProjectProperties>
+      <FlavorProperties GUID="{3D9AD99F-2412-4246-B90B-4EAA41C64699}">
+        <WcfProjectProperties>
+          <AutoStart>False</AutoStart>
+        </WcfProjectProperties>
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
