Added signing of articles web service dll

--- a/Main/Source/Web Services/BBC.Dna.Services.Articles/BBC.DNA.Services.Articles.csproj
+++ b/Main/Source/Web Services/BBC.Dna.Services.Articles/BBC.DNA.Services.Articles.csproj
@@ -8,13 +8,15 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BBC.Dna.Services.Apis</RootNamespace>
-    <AssemblyName>BBC.Dna.Services.Apis</AssemblyName>
+    <RootNamespace>BBC.Dna.Services.Articles</RootNamespace>
+    <AssemblyName>BBC.Dna.Services.Articles</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -119,6 +121,9 @@
       <Project>{BF321555-30BC-45A3-BF5F-0E381DE31FAE}</Project>
       <Name>BBC.DNA.Services.Moderation %28Source\Web Services\BBC.DNA.Services.Moderation\BBC.DNA.Services.Moderation%29</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="BBC.Dna.snk" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
