--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -857,8 +857,8 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>41717</DevelopmentServerPort>
+          <AutoAssignPort>False</AutoAssignPort>
+          <DevelopmentServerPort>39695</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
