--- a/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
@@ -181,8 +181,8 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>41721</DevelopmentServerPort>
+          <AutoAssignPort>False</AutoAssignPort>
+          <DevelopmentServerPort>39715</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:8081/comments</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
