Fix bug to correctly represent the moderation status of that user on the required site.

--- a/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FetchArticleModerationHistory.cs" />
+    <Compile Include="FetchPostModerationHistory.cs" />
     <Compile Include="FetchGroupsAndMembersTests.cs" />
     <Compile Include="GetUserCommentsStatsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
