--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1276,6 +1276,7 @@
     <None Include="addthreadtostickylist.sql" />
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
+    <None Include="getindexofcomment.sql" />
     <None Include="EditTopic2.sql" />
     <None Include="gettopicsforsiteID2.sql" />
     <None Include="getrecentcomments.sql" />
