--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -250,6 +250,7 @@
     <Compile Include="cachingSignals\groupSignalTests.cs" />
     <Compile Include="CommentBoxTestsUsingApi.cs" />
     <Compile Include="ArticlePageTests.cs" />
+    <Compile Include="MBAdmin.cs" />
     <Compile Include="Dna.Services.Articles\articles.cs" />
     <Compile Include="Dna.Services.Forums\forumThreadPosts.cs" />
     <Compile Include="Dna.Services.Forums\forumThreads.cs" />
