--- a/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -117,8 +117,11 @@
       <setting name="baseUri" serializeAs="String">
         <value>https://api.stage.bbc.co.uk/</value>
       </setting>
-      <setting name="certificateName" serializeAs="String">
-        <value>dna live</value>
+      <setting name="SnesActivityProcessor.certificateName" serializeAs="String">
+        <value>DNA</value>
+      </setting>
+      <setting name="ExModerationProcessor.certificateName" serializeAs="String">
+        <value>DNA</value>
       </setting>
     </DnaEventProcessorService.IntegrationTests.Properties.Settings>
   </applicationSettings>
