--- a/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -120,7 +120,10 @@
       <!--<setting name="snesBaseUri" serializeAs="String">
 		<value>https://api.test.bbc.co.uk/social/social/rest</value>
 	  </setting>-->
-      <setting name="certificateName" serializeAs="String">
+      <setting name="SnesActivityProcessor.certificateName" serializeAs="String">
+        <value>DNA</value>
+      </setting>
+      <setting name="ExModerationProcessor.certificateName" serializeAs="String">
         <value>DNA</value>
       </setting>
       <setting name="proxyAddress" serializeAs="String">
