--- a/Release/Source/Shared/BBC.Dna.Groups/BBC.Dna.Groups.csproj
+++ b/Release/Source/Shared/BBC.Dna.Groups/BBC.Dna.Groups.csproj
@@ -79,6 +79,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -108,6 +111,7 @@
     <Compile Include="IUserGroups.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserGroup.cs" />
     <Compile Include="UserGroups.cs" />
   </ItemGroup>
   <ItemGroup>
