--- a/Release/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Release/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -251,6 +251,7 @@
     <Compile Include="CommentBoxTestsUsingApi.cs" />
     <Compile Include="ArticlePageTests.cs" />
     <Compile Include="Dna.Services.Categories\categories.cs" />
+    <Compile Include="Dna.Services.Users\users.cs" />
     <Compile Include="MBAdmin.cs" />
     <Compile Include="Dna.Services.Articles\articles.cs" />
     <Compile Include="Dna.Services.Forums\forumThreadPosts.cs" />
