I must have modified the notes in this sample config file months ago.  So, checking in now.  No related work item or reviewer, so overriding the policy

--- a/Main/Source/Databases/The Guide/updatespBuildConfigurations-Sample.config
+++ b/Main/Source/Databases/The Guide/updatespBuildConfigurations-Sample.config
@@ -10,14 +10,13 @@
 	You can use relative or absolute paths.  Relative paths will be relative to the 
 	project file that started the updatesp task.
 	
+	Developer machines will usually only need a block for buildConfiguration="Debug",
+	and specify both TheGuide and SmallGuide in the related updatesp.conf
+	
 	-->
 	
 	<buildConfiguration tfsBuildDefinition="" buildConfiguration="Debug">
 		<updatespConfigFile>..\updatesp.config</updatespConfigFile>
-	</buildConfiguration>
-	
-	<buildConfiguration tfsBuildDefinition="" buildConfiguration="DebugSmallGuide">
-		<updatespConfigFile>..\updatespSmallGuide.config</updatespConfigFile>
 	</buildConfiguration>
 	
 </updatespBuildConfigurations>
