The PrefSkin is now NULL for all sites other than H2G2 for all user. The skinselector checks to see if the users prefskin is empty, if so then it uses the sites default skin instead. The users prefskin is only set when the user selects a new skin in the UI, currently only available in the h2g2 skins. When a new site is created the preference row for userid = 0 for the site contains NULL for the default skin. DBUpgrade script changes so that all users, including userid=0, have their prefskin set to NULL, *EXCLUDING* users on h2g2.

--- a/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateNewSiteTests.cs" />
     <Compile Include="GetIndexOfComment.cs" />
     <Compile Include="GetModerationExLinks.cs" />
     <Compile Include="FetchArticleModerationHistory.cs" />
