Changed IdentityUserId type to string.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -104,10 +104,10 @@
   </loggingConfiguration>
   <connectionStrings>
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
+      connectionString="Data Source=.;Initial Catalog=TheGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True" />
+      connectionString="Data Source=.;Initial Catalog=smallGuide;Integrated Security=True" />
   </connectionStrings>
   <applicationSettings>
     <DnaEventProcessorService.IntegrationTests.Properties.Settings>
