Modified VM conf to dual server dnatest from web2 and web4

--- a/Main/Source/ApacheAssets/Dev_apache_files/dna.conf
+++ b/Main/Source/ApacheAssets/Dev_apache_files/dna.conf
@@ -207,9 +207,10 @@ NameVirtualHost 10.161.69.146:80
     ServerAlias dnarelease.national.core.bbc.co.uk
     DocumentRoot /root/www
     RewriteEngine On
-    RewriteRule     ^/dna(?:-ssi)?/([^?]*)     http://dnaweb2.national.core.bbc.co.uk/dna/$1?_bbc_=1&__ip__=%{REMOTE_ADDR}     [E=force-no-vary:t,QSA,P]
-    <Proxy http://dnaweb2.national.core.bbc.co.uk/dna>
-        SetOutputFilter INCLUDES
+    RewriteMap servers rnd:/etc/httpd.d/conf/serverlist.txt
+    RewriteRule     ^/dna(?:-ssi)?/([^?]*)     http://${servers:dnatestservers}/dna/$1?_bbc_=1&__ip__=%{REMOTE_ADDR}     [E=force-no-vary:t,QSA,P]
+    <Proxy http://${servers:dnatestservers}/dna>
+      	SetOutputFilter INCLUDES
     </Proxy>
 
 #     RewriteRule     ^/dnaimages/([^?]*)     http://dnaweb2.national.core.bbc.co.uk/dnaimages/$1?_bbc_=1&__ip__=%{REMOTE_ADDR}     [E=force-no-vary:t,QSA,P]
