--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -132,6 +132,13 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MBBackupRestore.aspx.cs">
+      <DependentUpon>MBBackupRestore.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MBBackupRestore.aspx.designer.cs">
+      <DependentUpon>MBBackupRestore.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MBAdmin.aspx.cs">
       <DependentUpon>MBAdmin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -840,6 +847,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="MBBackupRestore.aspx" />
     <Content Include="MBAdmin.aspx" />
     <Content Include="MBAdminAssets.aspx" />
     <Content Include="MBAdminDesign.aspx" />
