--- a/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
+++ b/Main/Source/Shared/DnaIdentityWebServiceProxy/DnaIdentityWebServiceProxy.csproj
@@ -59,13 +59,18 @@
     <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BBC.Dna.Data, Version=1.0.0.1, Culture=neutral, PublicKeyToken=c2c5f2d0ba0d9887, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BBC.Dna.Data\bin\Debug\BBC.Dna.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Services" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityDebugSignInComponent.cs" />
     <Compile Include="IDnaIdentityWebServiceProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IdentityRestSignIn.cs" />
