--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -127,6 +127,7 @@
     </None>
     <None Include="Club.xsd" />
     <None Include="ContentSignifSettings.xsd" />
+    <None Include="Dna.Services.Common\contributions.xsd" />
     <None Include="Dna.Services.Common\ExtraInfo.xsd" />
     <None Include="Dna.Services.Users\group.xsd" />
     <None Include="Dna.Services.Users\user.xsd" />
