--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ArticleSummaryTest.cs" />
     <Compile Include="ArticleTest.cs" />
     <Compile Include="CategorySummaryTest.cs" />
+    <Compile Include="ContributionsTest.cs" />
     <Compile Include="CrumbTrailsTest.cs" />
     <Compile Include="DateTests.cs" />
     <Compile Include="EmailAlertGroupTest.cs" />
