1st pass at Article Search, Random Article, MonthSummary, ComingUp, Users About Me Article, Journal Posts, Messages and the A to Z Index APIs Return IdentityUserName (loginname) from API calls And function to return dnauserid from identityusername

--- a/Main/Source/Databases/The Guide/functions/functions.csproj
+++ b/Main/Source/Databases/The Guide/functions/functions.csproj
@@ -39,6 +39,7 @@
     <None Include="udf_calcdistance.sql" />
     <None Include="udf_checkerr.sql" />
     <None Include="udf_generateh2g2id.sql" />
+    <None Include="udf_getdnauseridfromloginname.sql" />
     <None Include="udf_GetGuideEntryType.sql" />
     <None Include="udf_getkeyphrasenamespacepairs.sql" />
     <None Include="udf_getobjectname.sql" />
