--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -263,6 +263,7 @@
     <Compile Include="CommentBoxTestsUsingApi.cs" />
     <Compile Include="ArticlePageTests.cs" />
     <Compile Include="Dna.Services.Categories\categories.cs" />
+    <Compile Include="Dna.Services.Categories\Index.cs" />
     <Compile Include="Dna.Services.Users\contributions.cs" />
     <Compile Include="Dna.Services.Users\users.cs" />
     <Compile Include="MBAdmin.cs" />
