--- a/Main/Tests/Legacy Tests/Tests/Tests.csproj
+++ b/Main/Tests/Legacy Tests/Tests/Tests.csproj
@@ -73,6 +73,7 @@
     <Reference Include="DnaIdentityWebServiceProxy, Version=1.0.1.15, Culture=neutral, PublicKeyToken=8e1f4c7d0de58a62, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Source\Reference DLLs\DnaIdentityWebServiceProxy.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
